fix - modal z-index

--- a/app/styles/budget-management/addBudgetRequest.css
+++ b/app/styles/budget-management/addBudgetRequest.css
@@ -39,6 +39,7 @@
   position: relative !important;
   font-family: var(--font-sans) !important;
   color: var(--primary-text-color) !important;
+  margin: auto !important;
 }
 
 .addBudgetRequestModal form {
