--- a/app/styles/components/modal.css
+++ b/app/styles/components/modal.css
@@ -5,11 +5,11 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 100;
+    z-index: 9999;
 }
 
 .modal {
